# todo_cmd

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/: task_class.md  task_status.md  todo_config.md  todo_ls.md  todo_mod.md  todo_rm.md
todo_cmd/: config_interface.py  init_todo.py  language.json  language.py  main.py  task_interface.py  templates.py  utils.py  validation.py
todo_cmd/interface/: config.py  task.py  todo.py
todo_cmd/sub_cmd/: init_todo.py  todo_add.py  todo_done.py  todo_log.py  todo_ls.py  todo_mod.py  todo_rm.py
